# ecnu-sa-labs

./: COURSE.md  README.md  TASKS.md  course-vm.md
.github/workflows/: classroom.yml
lab1/: .gitignore  Doxyfile  Makefile  answers.txt
lab1/.devcontainer/: devcontainer.json
lab1/afl_input/: seed.txt
lab1/c_programs/: test0.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
lab1/docs/: init.md
lab1/results/afl_logs/test0/: out.txt  test0
lab1/results/afl_logs/test0/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/afl_logs/test1/: out.txt  test1
lab1/results/afl_logs/test1/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/afl_logs/test1/afl_output/default/crashes/: README.txt
lab1/results/afl_logs/test2/: out.txt  test2
lab1/results/afl_logs/test2/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/afl_logs/test2/afl_output/default/crashes/: README.txt  id:000000,sig:08,src:000000,time:215,execs:23,op:havoc,rep:4
lab1/results/afl_logs/test3/: out.txt  test3
lab1/results/afl_logs/test3/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/afl_logs/test3/afl_output/default/queue/: id:000002,src:000000,time:183,execs:32,op:havoc,rep:8,+cov  id:000003,src:000000,time:218,execs:41,op:havoc,rep:2  id:000005,src:000000,time:312,execs:70,op:havoc,rep:8  id:000007,src:000000,time:415,execs:98,op:havoc,rep:16  id:000008,src:000000,time:468,execs:107,op:havoc,rep:4
lab1/results/afl_logs/test4/: out.txt  test4
lab1/results/afl_logs/test4/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/afl_logs/test4/afl_output/default/queue/: id:000001,src:000000,time:188,execs:23,op:havoc,rep:8,+cov  (+4 more)
lab1/results/afl_logs/test5/: out.txt  test5
lab1/results/afl_logs/test5/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/afl_logs/test6/: out.txt  test6
lab1/results/afl_logs/test6/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/afl_logs/test7/: out.txt  test7
lab1/results/afl_logs/test7/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/afl_logs/test8/: out.txt  test8
lab1/results/afl_logs/test8/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/afl_logs/test9/: out.txt  test9
lab1/results/afl_logs/test9/afl_output/default/: cmdline  fuzzer_setup  fuzzer_stats  plot_data
lab1/results/csa_logs/: test0_out.txt  test1_out.txt  test2_out.txt  test3_out.txt  test4_out.txt  test5_out.txt  test6_out.txt  test7_out.txt  test8_out.txt  test9_out.txt
lab2/: CMakeLists.txt  Doxyfile  Makefile
lab2/c_programs/: Makefile  test1.c  test2.c  test3.c  test4.c
lab2/docs/: init.md
lab2/include/: Instrument.h  Utils.h
lab2/ir_programs/: test1.ll  test2.ll  test3.ll  test4.ll
lab2/lib/: runtime.c
lab2/src/: DynamicAnalysisPass.cpp  StaticAnalysisPass.cpp  Utils.cpp
lab2/test/: Makefile  simple0.c  simple1.c  simple2.c  simple3.c  simple4.c  simple5.c  simple6.c  simple7.c  simple8.c  simple9.c
lab3/: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  config.txt
lab3/docs/: init.md
lab3/include/: Instrument.h  Utils.h
lab3/lib/: runtime.c
lab3/src/: Fuzzer.cpp  Instrument.cpp  Utils.cpp
lab3/test/: Makefile  easy1.c  easy2.c  path1.c  path2.c  path3.c  sanity1.c  test.sh
lab4/: Makefile  setup.cfg  setup.py
lab4/.devcontainer/: devcontainer.json
lab4/bugs/: __init__.py  bug1.py  bug2.py  bug3.py  bug4.py
lab4/delta_debugger/: __init__.py  __main__.py  delta.py
lab4/lib/: fuzzer
lab4/src/: BST.py  BSTUtils.py  __init__.py  test_strategies.py
lab4/test/: Makefile  sanity1.c  test.sh  test2.c
lab4/test/fuzz_input/: seed.txt
lab4/tests/: conftest.py  hypothesis.ini  makefile  simple_test.py  test1.py  test2.py  test3.py  test4.py
lab5/: .gitignore  setup.py
lab5/.devcontainer/: devcontainer.json
lab5/docs/: init.md
lab5/include/: DivZeroAnalysis.h  Utils.h
lab5/src/: DivZeroAnalysis.cpp  Domain.cpp  Utils.cpp
lab5/test/: Makefile  case01.c  test.sh  test03.c  test04.c  test05.c
lab6/: CMakeLists.txt  Doxyfile  Makefile
lab6/docs/: init.md
lab6/include/: DivZeroAnalysis.h  Domain.h  PointerAnalysis.h  Utils.h
lab6/src/: ChaoticIteration.cpp  DivZeroAnalysis.cpp  Domain.cpp  PointerAnalysis.cpp  Transfer.cpp  Utils.cpp
lab6/test/: Makefile  test01.c  test02.c  test03.c  test05.c  test06.c  test07.c  test08.c  test09.c  test10.c  test13.c  test14.c  test15.c  test17.c  test18.c
lab7/: CMakeLists.txt  Doxyfile  Makefile
lab7/.devcontainer/: devcontainer.json
lab7/include/: DSEInstrument.h  Instrument.h  SymbolicInterpreter.h  Utils.h
lab7/lib/: runtime.cpp
lab7/src/: ChaoticIteration.cpp  DSE.cpp  Instrument.cpp  Runtime.cpp  Strategy.cpp  SymbolicInterpreter.cpp  Utils.cpp
lab7/test/: Makefile  branch2.c  simple0.c  simple1.c  test  test04.c  test06.c  test16.c  test19.c
lab8/: CMakeLists.txt  LICENCE.md  Makefile
lab8/.devcontainer/: devcontainer.json
lab8/docs/: init.md
lab8/include/: ExecutionState.h  Expr.h  Ref.h  Solver.h  Symbolic.h  TerminationTypes.h  Z3Builder.h  Z3Solver.h
lab8/src/: CoreSolver.cpp  DynTaintAnalysisPass.cpp  ExecutionState.cpp  SolverImpl.cpp  Z3Builder.cpp  Z3Solver.cpp  main.cpp
lab8/test/: ControlFlowHijack.cpp  InjectionAttack.cpp  Makefile  example.txt  sequential.c  symbolic.c
lab9/: .gitignore  README.md  llvm.sh  refminiklee
lab9-MiniCREST/: Doxyfile
lab9-MiniCREST/include/: Runtime.h  Strategy.h
lab9-MiniCREST/src/: DSEInstrument.cpp
lab9-MiniCREST/test/: branch0.c  branch1.c
lab9/.devcontainer/: devcontainer.json
lab9/include/: Constraints.h  Executor.h  Solver.h  SolverImpl.h  Time.h
lab9/src/: DummySolver.cpp  Executor.cpp  Expr.cpp  Solver.cpp  Time.cpp  TinySolver.cpp
lab9/test/: example.c
lab_manual/: course-vm.md  lab1.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8-MiniCREST.md  lab8.md
(+31 files in other folders)
